--- a/app/views/home.pug
+++ b/app/views/home.pug
@@ -13,6 +13,9 @@ main.page-wrapper
       .col-md-12
         .alert.d-flex.alert-primary(role="alert")
           div CryptoBlades Tracker, with the help of your donations, has been migrated to a cloud server. If you still experience slow or longer loading, it means we are being <b>rate limited</b> by BSC Network. Please wait a few minutes before trying again.
+      .col-md-12
+        .alert.d-flex.alert-danger(role="alert")
+          div CryptoBlades Tracker is currently using 2 nodes, a public BSC node and a private one (Limited to 3m requests only). Please minimize the use of refresh button. Use it only if necessary. If you want to help increase this limit, we are accepting donations thru this address: <b>0x2548696795a3bCd6A8fAe7602fc26DD95A612574</b>
     .row.mx-n2.py-2
       .col-md-3.col-sm-6.px-2.mb-3
         .card.bg-secondary.h-100.rounded-3.p-4.text-center
