--- a/app/views/home.pug
+++ b/app/views/home.pug
@@ -16,11 +16,7 @@ main.page-wrapper
       .col-md-12
         .alert.d-flex.alert-danger(role="alert")
           div CryptoBlades Tracker is currently using 2 nodes, a public BSC node and a private one (Limited to 3m requests only). Please minimize the use of refresh button. Use it only if necessary. If you want to help increase this limit, we are accepting donations thru this address: <b>0x2548696795a3bCd6A8fAe7602fc26DD95A612574</b>
-    .row.mx-n2.py-2
-      .col-md-3.col-sm-6.px-2.mb-3
-        .card.bg-secondary.h-100.rounded-3.p-4.text-center
-          h6.fs-sm.fw-medium.text-muted Total Accounts
-          p#card-acc.h4.mb-2 0
+    .row.mx-n2.py-2      
       .col-md-3.col-sm-6.px-2.mb-3
         .card.bg-secondary.h-100.rounded-3.p-4.text-center
           h6.fs-sm.fw-medium.text-muted Total Unclaimed Skills
@@ -33,17 +29,27 @@ main.page-wrapper
         .card.bg-secondary.h-100.rounded-3.p-4.text-center
           h6.fs-sm.fw-medium.text-muted Total Skills in Wallet
           p#card-balance.h4.mb-2 0
+      .col-md-3.col-sm-6.px-2.mb-3
+        .card.bg-secondary.h-100.rounded-3.p-4.text-center
+          h6.fs-sm.fw-medium.text-muted Total Skill Assets
+          p#card-sassets.h4.mb-2 0
     .row.mx-n2.py-2
-      .col-md-6.col-sm-6.px-2.mb-3
-        .card.bg-secondary
-          .card-body.text-muted
-            | Current Skill Price:&nbsp;
-            span#card-price.text-white 0
-      .col-md-6.col-sm-6.px-2.mb-3
-        .card.bg-secondary
-          .card-body.text-muted
-            | Donate Address:&nbsp;
-            span.text-white 0x2548696795a3bCd6A8fAe7602fc26DD95A612574
+      .col-md-3.col-sm-6.px-2.mb-3
+        .card.bg-secondary.h-100.rounded-3.p-4.text-center
+          h6.fs-sm.fw-medium.text-muted Total Accounts
+          p#card-acc.h4.mb-2 0      
+      .col-md-3.col-sm-6.px-2.mb-3
+        .card.bg-secondary.h-100.rounded-3.p-4.text-center
+          h6.fs-sm.fw-medium.text-muted Total BNB Balance
+          p#card-bnb.h4.mb-2 0
+      .col-md-3.col-sm-6.px-2.mb-3
+        .card.bg-secondary.h-100.rounded-3.p-4.text-center
+          h6.fs-sm.fw-medium.text-muted Current Skill Price
+          p#card-price.h4.mb-2 0
+      .col-md-3.col-sm-6.px-2.mb-3
+        .card.bg-secondary.h-100.rounded-3.p-4.text-center
+          h6.fs-sm.fw-medium.text-muted Current Oracle Price
+          p#card-oprice.h4.mb-2 0      
     .row.mx-n2.py-2
       .col-md-12.col-sm-126.px-2.mb-3
         .card.bg-secondary
@@ -80,7 +86,7 @@ main.page-wrapper
                       | Skills in Wallet
                     th.text-white(data-field='total' data-formatter='currFormatter')
                       | Total Assets
-                    th.text-white(data-field='bnb' data-formatter='currFormatter')
+                    th.text-white(data-field='bnb' data-formatter='bnbFormatter')
                       | BNB Balance
                     th.text-white(data-field='action')
                       | Action
