--- a/app/views/footer.pug
+++ b/app/views/footer.pug
@@ -1,6 +1,11 @@
 footer.footer
     p.fs-sm.text-center.mb-0.pb-1
-        span.text-danger.opacity-50.me-1 CryptoBlades Tracker is not associated with CryptoBlades.
+        span.text-warning.opacity-50.me-1 CryptoBlades Tracker is not associated with CryptoBlades.
+    p.fs-sm.text-center.mb-0.pb-2
+        span.text-light.opacity-50.me-1 Made by
+        a.nav-link-style.nav-link-light.text-white(href='https://github.com/ed3ath' target='_blank' rel='noopener') eD3ath
+        | &nbsp;with
+        span.opacity-50.me-1(style='color: red;') &nbsp;&hearts;&hearts;&hearts;
     p.fs-sm.text-center.mb-0.pb-5
-        span.text-light.opacity-50.me-1 Made by&nbsp;
-        a.nav-link-style.nav-link-light(href='https://github.com/ed3ath' target='_blank' rel='noopener') eD3ath
+        | Donation address: 
+        span.text-white 0x2548696795a3bCd6A8fAe7602fc26DD95A612574
