--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -6,9 +6,16 @@ html(lang='en')
     title= title
     link(rel='apple-touch-icon', href='/favicon/apple-touch-icon.png')
     link(rel='icon', sizes='32x32', type='image/png', href='/favicon/favicon.png')
-    link(rel='stylesheet' media='screen' href='./css/theme.min.css')
     link(rel='stylesheet' media='screen' href='/css/bootstrap-table.min.css')
     link(rel='stylesheet' media='screen' href='/css/bootstrap-toggle.min.css')
+
+    link(rel='stylesheet' media='screen' href='/vendor/simplebar/dist/simplebar.min.css')
+    link(rel='stylesheet' media='screen' href='/vendor/prismjs/themes/prism.css')
+    link(rel='stylesheet' media='screen' href='/vendor/prismjs/plugins/toolbar/prism-toolbar.css')
+    link(rel='stylesheet' media='screen' href='/vendor/prismjs/plugins/line-numbers/prism-line-numbers.css')
+
+    link(rel='stylesheet' media='screen' href='/css/theme.min.css')
+    link(rel='stylesheet' media='screen' href='/css/core.css')
     script(async='' src='https://www.googletagmanager.com/gtag/js?id=G-2C7J6DL9GR')
     script.
       window.dataLayer = window.dataLayer || [];
@@ -20,11 +27,20 @@ html(lang='en')
   body(style='background-color: #12263f')
     block content
 
-    script(type="text/javascript" src='./libs/jquery/dist/jquery.min.js')
-    script(type="text/javascript" src='./vendor/bootstrap/dist/js/bootstrap.bundle.min.js' )
-    script(type="text/javascript" src='./vendor/simplebar/dist/simplebar.min.js')
-    script(type="text/javascript" src='./vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js')
-    script(type="text/javascript" src='./js/bootstrap-table.min.js')
-    script(type="text/javascript" src='./js/bootstrap-toggle.min.js')
-    script(type="text/javascript" src='./js/theme.min.js')
-    script(type="text/javascript" src='./js/core.js')
+    script(type="text/javascript" src='/libs/jquery/dist/jquery.min.js')
+    script(type="text/javascript" src='/vendor/bootstrap/dist/js/bootstrap.bundle.min.js')
+
+    script(type="text/javascript" src='/vendor/simplebar/dist/simplebar.min.js')
+    script(type="text/javascript" src='/vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js')
+    script(type="text/javascript" src='/vendor/prismjs/components/prism-core.min.js')
+    script(type="text/javascript" src='/vendor/prismjs/components/prism-markup.min.js')
+    script(type="text/javascript" src='/vendor/prismjs/components/prism-clike.min.js')
+    script(type="text/javascript" src='/vendor/prismjs/components/prism-javascript.min.js')
+    script(type="text/javascript" src='/vendor/prismjs/components/prism-pug.min.js')
+    script(type="text/javascript" src='/vendor/prismjs/plugins/toolbar/prism-toolbar.min.js')
+    script(type="text/javascript" src='/vendor/prismjs/plugins/copy-to-clipboard/prism-copy-to-clipboard.min.js')
+    script(type="text/javascript" src='/vendor/prismjs/plugins/line-numbers/prism-line-numbers.min.js')
+
+    script(type="text/javascript" src='/js/bootstrap-table.min.js')
+    script(type="text/javascript" src='/js/theme.min.js')
+    script(type="text/javascript" src='/js/core.js')
