--- a/app/views/home.pug
+++ b/app/views/home.pug
@@ -6,15 +6,9 @@ main.page-wrapper
       .col-md-4.col-sm-6.px-2
         select#select-currency.form-select2(style='float: right;')
     .row
-      .col-md-12
-        .alert.d-flex.alert-primary.alert-dismissible.fade.show(role="alert")
-          span.fw-medium CryptoBlades Tracker, with the help of your donations, has been migrated to a cloud server. If you still experience slow or longer loading, it means we are being <b>rate limited</b> by BSC Network. Please wait a few minutes before trying again.
-          button(type="button", data-bs-dismiss="alert", aria-label="Close").btn-close
-    .row
-      .col-md-12
-        .alert.d-flex.alert-danger.alert-dismissible.fade.show(role="alert")
-          span.fw-medium CryptoBlades Tracker is currently using 2 nodes, a public BSC node and a private one (Limited to 3m requests only). Please minimize the use of refresh button. Use it only if necessary. If you want to help increase this limit, we are accepting donations thru this address: <b>0x2548696795a3bCd6A8fAe7602fc26DD95A612574</b>
-          button(type="button", data-bs-dismiss="alert", aria-label="Close").btn-close
+      .col-md-12.mb-4
+        .card.h-100.rounded-3.p-3.text-white.bg-danger
+          p CryptoBlades Tracker is open-source so anyone can create a clone and modify it to ask for your sensitive informations. CryptoBlades Tracker <b>will never asked</b> for your seed phrase or private key! <b>Never share these information</b> to any site nor your friends. <b>CryptoBlades Tracker will only require you to enter your BSC address and nothing else</b>. Stay safe!   
     .row.mx-n2.py-2      
       .col-md-3.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
