--- a/app/views/home.pug
+++ b/app/views/home.pug
@@ -8,7 +8,7 @@ main.page-wrapper
     .row
       .col-md-12.mb-4
         .card.h-100.rounded-3.p-3.text-white.bg-danger
-          p CryptoBlades Tracker is open-source so anyone can create a clone and modify it to ask for your sensitive informations. CryptoBlades Tracker <b>will never asked</b> for your seed phrase or private key! <b>Never share these information</b> to any site nor your friends. <b>CryptoBlades Tracker will only require you to enter your BSC address and nothing else</b>. Stay safe!   
+          p CryptoBlades Tracker is open-source so anyone can create a clone and modify it to ask for your sensitive information. CryptoBlades Tracker <b>will never ask</b> for your seed phrase or private key! <b>Never share these information</b> to any site nor your friends. <b>CryptoBlades Tracker will only require you to enter your BSC address and nothing else</b>. Stay safe!   
     .row.mx-n2.py-2      
       .col-md-3.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
