--- a/app/views/home.pug
+++ b/app/views/home.pug
@@ -10,36 +10,40 @@ main.page-wrapper
         .card.h-100.rounded-3.p-3.text-white.bg-danger
           p CryptoBlades Tracker is open-source so anyone can create a clone and modify it to ask for your sensitive information. CryptoBlades Tracker <b>will never ask</b> for your seed phrase or private key! <b>Never share these information</b> to any site nor your friends. <b>CryptoBlades Tracker will only require you to enter your BSC address and nothing else</b>. Stay safe!   
     .row.mx-n2.py-2
-      .col-md-3.col-sm-6.px-2.mb-3
+      .col-md-2.col-sm-6.px-2.mb-3
+        .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
+          h6.fs-sm.fw-medium.text-muted Total In-game Skills
+          p#card-ingame.h4.mb-2.text-white 0
+      .col-md-2.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
           h6.fs-sm.fw-medium.text-muted Total Unclaimed Skills
           p#card-uskills.h4.mb-2.text-white 0
-      .col-md-3.col-sm-6.px-2.mb-3
+      .col-md-2.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
           h6.fs-sm.fw-medium.text-muted Total Staked Skills
-          p#card-sskills.h4.mb-2.text-white 0
-      .col-md-3.col-sm-6.px-2.mb-3
+          p#card-sskills.h4.mb-2.text-white 0      
+      .col-md-2.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
           h6.fs-sm.fw-medium.text-muted Total Skills in Wallet
           p#card-balance.h4.mb-2.text-white 0
-      .col-md-3.col-sm-6.px-2.mb-3
+      .col-md-2.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
           h6.fs-sm.fw-medium.text-muted Total Skill Assets
           p#card-sassets.h4.mb-2.text-white 0
-    .row.mx-n2.py-2
-      .col-md-3.col-sm-6.px-2.mb-3
-        .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
-          h6.fs-sm.fw-medium.text-muted Total Accounts
-          p#card-acc.h4.mb-2.text-white 0      
-      .col-md-3.col-sm-6.px-2.mb-3
+      .col-md-2.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
           h6.fs-sm.fw-medium.text-muted Total BNB Balance
           p#card-bnb.h4.mb-2.text-white 0
-      .col-md-3.col-sm-6.px-2.mb-3
+    .row.mx-n2.py-2
+      .col-md-4.col-sm-6.px-2.mb-3
+        .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
+          h6.fs-sm.fw-medium.text-muted Total Accounts
+          p#card-acc.h4.mb-2.text-white 0
+      .col-md-4.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
           h6.fs-sm.fw-medium.text-muted Current Skill Price
           p#card-price.h4.mb-2.text-white 0
-      .col-md-3.col-sm-6.px-2.mb-3
+      .col-md-4.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
           h6.fs-sm.fw-medium.text-muted Current Oracle Price
           p#card-oprice.h4.mb-2.text-white 0      
