--- a/app/views/home.pug
+++ b/app/views/home.pug
@@ -9,6 +9,10 @@ main.page-wrapper
       .col-md-12.mb-4
         .card.h-100.rounded-3.p-3.text-white.bg-danger
           p CryptoBlades Tracker is open-source so anyone can create a clone and modify it to ask for your sensitive information. CryptoBlades Tracker <b>will never ask</b> for your seed phrase or private key! <b>Never share these information</b> to any site nor your friends. <b>CryptoBlades Tracker will only require you to enter your BSC address and nothing else</b>. Stay safe!   
+      .col-md-12.mb-2
+        .alert.alert-primary.alert-dismissible.fade.show(role="alert")
+          | <span class="text-center">I'm in dire need of gas.</span> I accept donations thru this address: <b>0x2548696795a3bCd6A8fAe7602fc26DD95A612574</b>. Any amount will do. <span class="opacity-50 me-1" style="color: red;">♥♥♥</span>
+          button(type="button", data-bs-dismiss="alert", aria-label="Close").btn-close
     .row.mx-n2.py-2
       .col-md-2.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
