fixed account and character order

--- a/app/views/home.pug
+++ b/app/views/home.pug
@@ -3,8 +3,8 @@ main.page-wrapper
     .row.mx-n2.py-2
       .col-md-8.col-sm-6.px-2
         h1.text-white CryptoBlades Tracker        
-      .col-md-4.col-sm-6.px-2
-        select#select-currency.form-select2(style='float: right;')
+      .col-md-4.col-sm-6.px-2.float-right
+        select#select-currency.form-select2(style='float: right !important;')
     .row
       .col-md-12.mb-4
         .card.h-100.rounded-3.p-3.text-white.bg-danger
