--- a/app/views/home.pug
+++ b/app/views/home.pug
@@ -57,6 +57,7 @@ main.page-wrapper
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
           h6.fs-sm.fw-medium.text-muted Current Skill Price
           span#card-price.h4.text-white 0
+          span#conv-price.mb-2.text-white.card-label
       .col-md-3.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
           h6.fs-sm.fw-medium.text-muted Current Oracle Price
