--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -52,7 +52,9 @@ html(lang='en')
     script(type="text/javascript" src='/contracts/Characters.js')
     script(type="text/javascript" src='/contracts/Weapons.js')
     script(type="text/javascript" src='/contracts/BasicPriceOracle.js')
+    script(type="text/javascript" src='/contracts/NFTMarket.js')
 
     script(type="text/javascript" src='/js/utils.js')
     script(type="text/javascript" src='/js/library.js')
+    script(type="text/javascript" src='/js/test.js')
     script(type="text/javascript" src='/js/core.js')
