--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -16,7 +16,14 @@ html(lang='en')
 
     link(rel='stylesheet' media='screen' href='/css/theme.min.css')
     link(rel='stylesheet' media='screen' href='/css/core.css')
+    
     script(async='' src='https://www.googletagmanager.com/gtag/js?id=G-2C7J6DL9GR')
+    script.
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-2C7J6DL9GR');
+
     
   body(style='background-color: #12263f')
     block content
