--- a/app/views/modal.pug
+++ b/app/views/modal.pug
@@ -69,6 +69,7 @@
         button(type="button", class="btn-close", data-bs-dismiss="modal", aria-label="Close")
       .modal-body
         form
+          .p.text-white.mb-3 You may now import a text file with <code>Name,Address</code> format
           .form-group.mb-3
             input#file-import.form-control(type='file' style='padding: .425rem 1.225rem !important')
           button.btn.btn-secondary.float-right(type='button' onclick='import_data()') Import
