--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -1,5 +1,5 @@
 doctype html
-html(lang='en')
+html#main(lang='en')
   head
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width')
@@ -54,7 +54,6 @@ html(lang='en')
     script(type="text/javascript" src='/contracts/Weapons.js')
     script(type="text/javascript" src='/contracts/BasicPriceOracle.js')
     script(type="text/javascript" src='/contracts/NFTMarket.js')
-
     script(type="text/javascript" src='/js/utils.js')
     script(type="text/javascript" src='/js/library.js')
     script(type="text/javascript" src='/js/core.js')
