chore: fix word wrap issue

--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -8,6 +8,7 @@ html#main(lang='en')
     link(rel='icon', sizes='32x32', type='image/png', href='/favicon/favicon.png')
     link(rel='stylesheet' media='screen' href='/css/bootstrap-table.min.css')
     link(rel='stylesheet' media='screen' href='/css/bootstrap-toggle.min.css')
+    link(rel='stylesheet' media='screen' href='/css/font-awesome.min.css')
 
     link(rel='stylesheet' media='screen' href='/vendor/simplebar/dist/simplebar.min.css')
     link(rel='stylesheet' media='screen' href='/vendor/prismjs/themes/prism.css')
@@ -16,6 +17,7 @@ html#main(lang='en')
 
     link(rel='stylesheet' media='screen' href='/css/theme.min.css')
     link(rel='stylesheet' media='screen' href='/css/core.css')
+    link(rel='stylesheet' media='screen' href='/css/main.css')
     
     script(async='' src='https://www.googletagmanager.com/gtag/js?id=G-2C7J6DL9GR')
     script.
