--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -56,4 +56,7 @@ html#main(lang='en')
     script(type="text/javascript" src='/contracts/NFTMarket.js')
     script(type="text/javascript" src='/js/utils.js')
     script(type="text/javascript" src='/js/library.js')
-    script(type="text/javascript" src='/js/core.js')
+    if page === 'logger'
+      script(type="text/javascript" src='/js/fight-logger.js')
+    if page === 'home'
+      script(type="text/javascript" src='/js/core.js')
