--- a/app/views/pages/home.pug
+++ b/app/views/pages/home.pug
@@ -13,8 +13,8 @@ main.page-wrapper
         .alert.alert-primary.alert-dismissible.fade.show(role="alert")
           | <span class="text-center">I'm in dire need of gas. I accept donations thru this address: <b>0x2548696795a3bCd6A8fAe7602fc26DD95A612574</b>. Any amount will do. <span class="opacity-50 me-1" style="color: red;">♥♥♥</span>
           button(type="button", data-bs-dismiss="alert", aria-label="Close").btn-close
-        .alert.alert-primary.alert-dismissible.fade.show(role="alert")
-          | <span class="text-center">Fight Result Logger now available! This will be free for 1 week. Enjoy :) <a href='/logger' target='_blank'>CLICK HERE</a></span>
+        .alert.alert-primary.success-dismissible.fade.show(role="alert")
+          | <span class="text-center">Fight Result Logger now available! <b>This will be free for 1 week</b>. Enjoy :) <a href='/logger' target='_blank'>CLICK HERE</a></span>
           button(type="button", data-bs-dismiss="alert", aria-label="Close").btn-close
     .row.mx-n2.py-2
       .col-md-2.col-sm-6.px-2.mb-3
