--- a/app/views/pages/logger.pug
+++ b/app/views/pages/logger.pug
@@ -32,7 +32,7 @@ main.page-wrapper
           .card-body
             .row
               .col-md-12.mb-3
-                .p.text-white Result is in csv format <code>Address,Fight Outcome,Character ID,Weapon ID,Player Roll,Enemy Roll,Skill Reward,XP Reward,Gas Cost</code>
+                .p.text-white Results are in csv format <code>Address,Fight Outcome,Character ID,Weapon ID,Player Roll,Enemy Roll,Skill Reward,XP Reward,Gas Cost</code>
             .row
               .col-md-3.mb-3
                 label.text-white.mb-1 Address subscribed
