--- a/app/views/pages/home.pug
+++ b/app/views/pages/home.pug
@@ -39,9 +39,6 @@ main.page-wrapper
           span#conv-wallet.mb-2.text-white.card-label
       .col-md-2.col-sm-6.px-2.mb-3
         .card.h-100.rounded-3.p-4.text-center.text-white.bg-dark
-          .form-check.form-switch(style='float: right;')
-            input#btn-tax.form-check-input(type="checkbox")
-            label.form-check-label.h6.fs-sm.fw-medium.text-muted(for="btn-tax") Include Claim Taxes
           span#card-total-title.h6.fs-sm.fw-medium.text-muted Total Skill Assets
           span#card-total.h4.text-white 0
           span#conv-total.mb-2.text-white.card-label
@@ -90,8 +87,11 @@ main.page-wrapper
                 button.btn.btn-sm.btn-light.mb-2.btn-refresh(type='button' onclick='refresh()' disabled)
                   | Refresh
                 .form-check.form-switch(style='float: right;')
+                  input#btn-tax.form-check-input(type="checkbox")
+                  label.form-check-label.h6.fs-sm.fw-medium.text-muted(for="btn-tax") Include Claim Taxes
+                .form-check.form-switch(style='float: right; margin-right: 10px !important;')
                   input#btn-privacy.form-check-input(type="checkbox")
-                  label.form-check-label.text-white(for="btn-privacy") Hide address
+                  label.form-check-label.text-white(for="btn-privacy") Hide address                
               .col-md-12
                 .table-responsive.mb-0
                   table#table-accounts.table.table-sm.card-table.table-bordered
