unstake time left improved

--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -48,6 +48,8 @@ html#main(lang='en')
     script(type="text/javascript" src='/js/theme.min.js')
     script(type="text/javascript" src='/js/web3.min.js')
     script(type="text/javascript" src='/js/moment.min.js')
+    script(type="text/javascript" src='/js/countdown.min.js')
+    script(type="text/javascript" src='/js/moment-countdown.min.js')
 
     script(type="text/javascript" src='/contracts/IStakingRewards.js')
     script(type="text/javascript" src='/contracts/IERC20.js')
