--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -10,11 +10,6 @@ html#main(lang='en')
     link(rel='stylesheet' media='screen' href='/css/bootstrap-toggle.min.css')
     link(rel='stylesheet' media='screen' href='/css/font-awesome.min.css')
 
-    link(rel='stylesheet' media='screen' href='/vendor/simplebar/dist/simplebar.min.css')
-    link(rel='stylesheet' media='screen' href='/vendor/prismjs/themes/prism.css')
-    link(rel='stylesheet' media='screen' href='/vendor/prismjs/plugins/toolbar/prism-toolbar.css')
-    link(rel='stylesheet' media='screen' href='/vendor/prismjs/plugins/line-numbers/prism-line-numbers.css')
-
     link(rel='stylesheet' media='screen' href='/css/theme.min.css')
     link(rel='stylesheet' media='screen' href='/css/core.css')
     link(rel='stylesheet' media='screen' href='/css/main.css')
@@ -30,37 +25,10 @@ html#main(lang='en')
   body(style='background-color: #12263f')
     block content
 
-    script(type="text/javascript" src='/libs/jquery/dist/jquery.min.js')
-    script(type="text/javascript" src='/vendor/bootstrap/dist/js/bootstrap.bundle.min.js')
-
-    script(type="text/javascript" src='/vendor/simplebar/dist/simplebar.min.js')
-    script(type="text/javascript" src='/vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js')
-    script(type="text/javascript" src='/vendor/prismjs/components/prism-core.min.js')
-    script(type="text/javascript" src='/vendor/prismjs/components/prism-markup.min.js')
-    script(type="text/javascript" src='/vendor/prismjs/components/prism-clike.min.js')
-    script(type="text/javascript" src='/vendor/prismjs/components/prism-javascript.min.js')
-    script(type="text/javascript" src='/vendor/prismjs/components/prism-pug.min.js')
-    script(type="text/javascript" src='/vendor/prismjs/plugins/toolbar/prism-toolbar.min.js')
-    script(type="text/javascript" src='/vendor/prismjs/plugins/copy-to-clipboard/prism-copy-to-clipboard.min.js')
-    script(type="text/javascript" src='/vendor/prismjs/plugins/line-numbers/prism-line-numbers.min.js')
-
-    script(type="text/javascript" src='/js/bootstrap-table.min.js')
-    script(type="text/javascript" src='/js/theme.min.js')
-    script(type="text/javascript" src='/js/web3.min.js')
-    script(type="text/javascript" src='/js/moment.min.js')
-    script(type="text/javascript" src='/js/countdown.min.js')
-    script(type="text/javascript" src='/js/moment-countdown.min.js')
-
-    script(type="text/javascript" src='/contracts/IStakingRewards.js')
-    script(type="text/javascript" src='/contracts/IERC20.js')
-    script(type="text/javascript" src='/contracts/CryptoBlades.js')
-    script(type="text/javascript" src='/contracts/Characters.js')
-    script(type="text/javascript" src='/contracts/Weapons.js')
-    script(type="text/javascript" src='/contracts/BasicPriceOracle.js')
-    script(type="text/javascript" src='/contracts/NFTMarket.js')
-    script(type="text/javascript" src='/js/utils.js')
-    script(type="text/javascript" src='/js/library.js')
+    script(type="text/javascript" src='/build/js/vendor-min.js')
+    script(type="text/javascript" src='/build/js/contracts-min.js')
+    script(type="text/javascript" src='/build/js/library-min.js')
     if page === 'logger'
-      script(type="text/javascript" src='/js/fight-logger.js')
+      script(type="text/javascript" src='/build/js/fight-min.js')
     if page === 'home'
-      script(type="text/javascript" src='/js/core.js')
+      script(type="text/javascript" src='/build/js/core-min.js')
